<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">


        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent" android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgRobokalam"
                android:src="@drawable/robokalam_logo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="19dp"
                android:text="@string/who_are_we"
                android:lineSpacingExtra="6dp"/>
            <TextView
                android:text="@string/ROBOKALAM"
                android:textSize="16sp"
                android:padding="20dp"
                android:justificationMode="inter_character"
                android:lineSpacingExtra="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="19dp"
                android:text="@string/vision"
                android:lineSpacingExtra="6dp"/>
            <TextView
                android:text="@string/visiondec"
                android:textSize="16sp"
                android:padding="20dp"
                android:justificationMode="inter_character"
                android:lineSpacingExtra="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="19dp"
                android:text="@string/mission"
                android:lineSpacingExtra="6dp"/>
            <TextView
                android:text="@string/missiondec"
                android:textSize="16sp"
                android:padding="20dp"
                android:justificationMode="inter_character"
                android:lineSpacingExtra="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>



</ScrollView>